--- a/config/database.yml
+++ b/config/database.yml
@@ -10,15 +10,15 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8mb4
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  socket: /tmp/mysql.sock
 
 development:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: ajax_app_rails7_development
 
 # Warning: The database defined as "test" will be erased and
@@ -26,8 +26,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: ajax_app_rails7_test
-
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -50,6 +53,5 @@ test:
 #
 production:
   <<: *default
-  database: ajax_app_rails7_2_production
-  username: ajax_app_rails7_2
-  password: <%= ENV["AJAX_APP_RAILS7_2_DATABASE_PASSWORD"] %>
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
